# OrangeSoda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bootstrap/: CMakeLists.txt
bootstrap/include/: bootstrap.h  opcodes.h  utils.h
bootstrap/osbc/: CMakeLists.txt  ast.h  codegen.cpp  declarer.cpp  declarer.h  error.h  lex.cpp  lex.h  main.cpp  osbc.h  parse.cpp  parse.h  resolver.cpp  resolver.h  scope.cpp  scope.h  symbol.cpp  symbol.h  symtable.cpp  symtable.h  token.h
bootstrap/osbc/6502/: codegen.cpp  codegen.h
bootstrap/osbc/ast/: base.h  expr.cpp  expr.h  stmt.h  top.h  visitor.h
bootstrap/osbc/llvm/: codegen.cpp  codegen.h  llvm.h
bootstrap/osvm/: CMakeLists.txt  main.cpp
notes/: assignment.md  consts.md  ranges.md  structs.md
tests/: base.os  test.os
